/*
 * $Id$
 */

2011-05-26 16:23 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  +  wxHarbour.hbc

2011-05-26 16:22 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  wxHarbour.hbc
  *  wxHarbour.hbp
  *  wxharbour.spec

2011-05-26 13:17 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  +  wxHarbour.hbc
  -  wxharbour.hbc
     * renamed hbmk2 configuration file

2011-05-25 18:42 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  -  GNUmakefile
  -  build_bkls.sh
  -  config/harbour_bkl.py
  -  config/mkdirstempl.bkl
  -  config/tmpl_hrb.bkl
  -  makefile.bcc
  -  makefile.gcc
  -  makefile.vc
  -  wxharbour.bkl
     * from now on, using hbmk2 wxHarbour.hbp to build the library

2011-05-25 07:47 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  wxHarbour.hbp
     ! Fixed using unicode version of libs on win platforms
     * added some flags to msvc compiler

2011-05-24 15:29 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  +  wxHarbour.hbp
  -  wxharbour.hbp
     * using hbmk2 to build lib

2011-05-24 12:59 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/raddox/TField.prg
     * using DBS_LEN on returning keyval for a numeric field

2011-05-18 12:07 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  GNUmakefile
  *  makefile.bcc
  *  makefile.gcc
  *  makefile.vc
     * updated per changes in harbour template bakefile

  *  config/tmpl_hrb.bkl
     * using HBDIR var to contain base dir for harbour install

  *  wxharbour.bkl
     * updated svn id

2011-05-17 18:11 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  GNUmakefile
  *  makefile.bcc
  *  makefile.gcc
  *  makefile.vc
     * updated per changes in bakefile's

  *  config/tmpl_hrb.bkl
     * using hbmk2 --hbdir* tool to set inc/lib dirs on win platforms
     * updated default wx base dir to 2.8.12

  *  wxharbour.bkl
     ! error on win install by remove "/" end separator

2011-05-09 15:43 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  makefile.gcc